<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ll7.secondapp.FragmentHome">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <TextView android:id="@+id/dataCountText"
            android:text="@string/none"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button android:id="@+id/archiveButton"
            android:text="@string/archive"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>

        <Button android:id="@+id/scanCall"
            android:text="@string/scan_call"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>

        <Button android:id="@+id/scanSMS"
            android:text="@string/scan_sms"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>

        <Button android:id="@+id/scanAct"
            android:text="@string/scan_act"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>

        <Button android:id="@+id/scanLoc"
            android:text="@string/scan_loc"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>


</FrameLayout>
